css/main.css
body {
  font-size: 18px;
  margin: 0;
  color: #000;
  font-family: arial;
  background-color: #d7ccc2;
}

#main-container {
  max-width: 1000px;
  margin: auto;
  padding: 0 4%;
}

#main-container header,
#main-container main {
  margin: 5% 0;
}


#main-nav a {
  display: block;
  padding: 4% 0;
  margin: 1% 0;
  font-size: 1.5em;
  text-align: center;
  text-decoration: none;
  color: #000;
  border-radius: 5px;
  border: 3px solid #c29d57;
}

#main-title,
#main-content {
  padding: 4%;
  margin: 0;
}

#main-title {
  text-align: center;
  font-size: 2em;
  color: #323138;
}


#main-content p {
  margin: 2% 0;
  line-height: 30px;
}

#main-content img {
  width: 90%;
  display: block;
  border: 10px solid #323138;
}

footer {
  background-color: #B5B4B3;
}

@media (min-width: 700px) {

  #main-title {
    font-size: 2.3em;
  }

  #main-nav a {
    display: inline-block;
    margin-left: 2%;
    margin-right: 2%;
    float: right;
    width: 15%;
    border: none;
    border-bottom: 3px solid #c29d57;
  }

  #main-nav::after {
    clear: both;
    content: ".";
    display: block;
    height: 0;
    overflow: hidden;
  }

  #main-container main {
    font-size: 1.3em;
  }

  #main-container main::after,
  #main-content::after {
      clear: both;
      content: ".";
      display: block;
      height: 0;
      overflow: hidden;
  }

  #main-content p {
    width: 40%;
    float: left;
    padding-left: 4%;
    padding-right: 2%;
    line-height: 40px;
  }

  footer::after {
    clear: both;
    content: ".";
    display: block;
    height: 0;
    overflow: hidden;
  }
}

@media (min-width:1200px) {

  #main-nav a {
    width: 10%;
    font-size: 1em;
  }

  #main-container article #main-title {
    width: 20%;
    float: left;
  }

  #main-content {
    width: 60%;
    float: right;
  }

  #main-content p {
    float: none;
    width: auto;
  }
}

